# scenecraft-engine

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  selections.md
.claude/: settings.local.json
agent/: manifest.yaml  progress.yaml
agent/clarifications/: clarification-5-undo-system.md
agent/commands/: acp.artifact-glossary.md  acp.artifact-reference.md  acp.artifact-research.md  acp.audit.md  acp.clarification-address.md  acp.clarification-create.md  acp.design-create.md  acp.handoff.md  acp.index.md  acp.init.md  acp.package-create.md  acp.package-install.md  acp.pattern-create.md  acp.plan.md  acp.proceed.md  acp.project-create.md  acp.report.md  acp.resume.md  acp.sessions.md  acp.spec.md  acp.status.md  acp.sync.md  acp.task-create.md  acp.validate.md  acp.version-check-for-updates.md  acp.version-check.md  acp.version-update.md  command.template.md  git.commit.md
agent/design/: design.template.md  local.ai-effect-director.md  local.backend-rendered-preview-streaming.md  local.beatlab-server.md  local.chat-audio-tools.md  local.effect-curves-macro-panel.md  local.frontend-matched-effects-engine.md  local.generation-provider-landscape.md  local.hit-marker-web-ui.md  local.hosted-mode-architecture.md  local.multi-layer-audio-intelligence.md  local.multi-model-stem-pipeline.md  local.persisted-rules.md  local.project-admin-console.md  local.stem-aware-audio-descriptions.md  local.undo-system.md  local.wan21-film-pipeline.md  requirements.md
agent/drafts/: describe_audio-plugin.md
agent/patterns/: pattern.template.md
scripts/: benchmark_separation.py  migrate_audio_from_transitions.py  sync_lipsync_test.py
tests/: conftest.py  manual_preview_stream.html  test_ai.py  test_analysis_cache_schema.py  test_analyze_master_bus.py  test_analyze_master_bus_roundtrip.py  test_analyzer.py  test_api.py  test_apply_mix_plan.py  test_audio_align.py  test_audio_candidates.py  test_audio_clip_batch_ops.py  test_audio_isolations_schema.py  test_audio_mixdown.py  test_auth_middleware.py  test_autoduck_flow.py  test_background_renderer.py  test_batch_delete_keyframe.py  test_bounce_audio.py  test_candidate_pool.py  test_candidate_pool_endpoints.py  test_chat_isolate_vocals.py  test_chunked_proxies.py  test_compositor_parity.py  test_delete_keyframe.py  test_duplicate_keyframe.py  test_effect_curves_api.py  test_effect_curves_schema.py  test_effect_tools.py  test_fastapi_audio_clips.py  test_fastapi_audio_tracks.py  test_fastapi_auth_and_errors.py  test_fastapi_checkpoints_chat_plugins.py  test_fastapi_effect_curves.py  test_fastapi_keyframes_transitions.py  test_fastapi_mix_and_bounce.py  test_fastapi_projects_and_misc.py  test_fastapi_render_files_pool.py  test_fastapi_scaffold.py  test_fastapi_structural_lock.py  (+39 more)
(+382 files in other folders)
